--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
     -->
     <title>Star telescope</title>
   </head>
-  <body>
+  <body style="width: 100%;height: 100%;overflow: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="width: 100%;height: 100%;overflow-y: scroll;padding-right: 17px;box-sizing: content-box;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
